--- a/inflation_adjusting.qmd
+++ b/inflation_adjusting.qmd
@@ -1,3 +1,7 @@
+---
+title: 'Inflation adjusting with Realtalk'
+---
+
 ### Inflation adjusting using [realtalk](https://economic.github.io/realtalk/)
 
 -   Install required libraries
