--- a/prev_bootcamps.qmd
+++ b/prev_bootcamps.qmd
@@ -1,3 +1,38 @@
+---
+title: '2021 and 2022 Bootcamps'
+---
+
+
 [EPI Bootcamp Website](https://economic.github.io/data_bootcamp/)
 
-2022 Data analysis in R [Video](https://www.youtube.com/watch?v=PG7T0AoxIY0&list=PLOeWdRZsn2L__Noita2w4bQwd1tMJrfLU&index=7)
+
+## 2022 Data analysis in R ([Video](https://www.youtube.com/watch?v=PG7T0AoxIY0&list=PLOeWdRZsn2L__Noita2w4bQwd1tMJrfLU&index=7))
+[Data analysis in R slides](zipperer_dataanalysisinR_slides.pdf)  
+[Historical minimum wage data](mw_state_annual.xlsx)  
+[CPI-U-RS data](r-cpi-u-rs-allitems.xlsx)  
+[EPI CPS ORG data](epi_cps_org_2022.dta.zip)  
+
+## 2022 Data bootcamp: Code Library Presentation ([Video](https://www.youtube.com/watch?v=3owr9nGizYQ&list=PLOeWdRZsn2L__Noita2w4bQwd1tMJrfLU&index=6))
+[Code library powerpoint](Code&#32;Library&#32;Presentation.pptx)
+
+## 2022 Data analysis in Stata ([Video](https://www.youtube.com/watch?v=L04fzN2uOVE&list=PLOeWdRZsn2L__Noita2w4bQwd1tMJrfLU&index=5))
+[Data analysis in Stata slides](Data&#32;analysis&#32;in&#32;.pptx)  
+[Stata session do file](data_bootcamp_2022.do)  
+
+## 2021 First steps in Stata ([Video](https://www.youtube.com/watch?v=t1tKg9A6NaU&list=PLOeWdRZsn2L8geg2kkqcYZniR5TBk98si&index=7))
+[Stata session 1 slides](https://economic.github.io/data_bootcamp/stata_session1.pdf)  
+[Stata session 1 do file](https://economic.github.io/data_bootcamp/stata_session1.do)  
+[EPI CPS ORG 2020 stata data file](https://economic.github.io/data_bootcamp/epi_cpsorg_2020.dta)
+
+## 2021 Using Stata effectively ([Video](https://www.youtube.com/watch?v=cl91pM6XuHM&list=PLOeWdRZsn2L8geg2kkqcYZniR5TBk98si&index=8))
+[Stata session 2 slides](https://economic.github.io/data_bootcamp/stata_session2.pdf)  
+[Stata session 2 do file](https://economic.github.io/data_bootcamp/earn_data_bootcamp_session2.do)  
+[CPI-U-RS data](https://economic.github.io/data_bootcamp/r-cpi-u-rs-allitems.xlsx)  
+[EPI CPS ORG 2020 stata data file](https://economic.github.io/data_bootcamp/epi_cpsorg_2020.dta)  
+[Full EPI CPS ORG](https://microdata.epi.org/epi_cpsorg_1979_2021.zip) (zipped data files)
+
+## 2021 First steps in R ([Video](https://www.youtube.com/watch?v=fcHHWTwZZq8&list=PLOeWdRZsn2L8geg2kkqcYZniR5TBk98si&index=7))
+[Slides](zipperer_firststepsR_slides.pdf)  
+[acs_2019.dta](acs_2019.dta)  
+[epi_wage_percentiles.csv](epi_wage_percentiles.csv)  
+[acs_wage_analysis.R](acs_wage_analysis.R)
