--- a/prev_bootcamps.qmd
+++ b/prev_bootcamps.qmd
@@ -1,5 +1,5 @@
 ---
-title: '2021 and 2022 Bootcamps'
+title: '2021 and 2022 data bootcamps'
 ---
 
 
@@ -8,12 +8,12 @@ title: '2021 and 2022 Bootcamps'
 
 ## 2022 Data analysis in R ([Video](https://www.youtube.com/watch?v=PG7T0AoxIY0&list=PLOeWdRZsn2L__Noita2w4bQwd1tMJrfLU&index=7))
 [Data analysis in R slides](zipperer_dataanalysisinR_slides.pdf)  
-[Historical minimum wage data](mw_state_annual.xlsx)  
+[Historical minimum wage data](https://github.com/Economic/data_bootcamp/blob/master/mw_state_annual.xlsx)  
 [CPI-U-RS data](r-cpi-u-rs-allitems.xlsx)  
-[EPI CPS ORG data](epi_cps_org_2022.dta.zip)  
+[EPI CPS ORG data](https://github.com/Economic/data_bootcamp/blob/master/epi_cps_org_2022.dta.zip)  
 
 ## 2022 Data bootcamp: Code Library Presentation ([Video](https://www.youtube.com/watch?v=3owr9nGizYQ&list=PLOeWdRZsn2L__Noita2w4bQwd1tMJrfLU&index=6))
-[Code library powerpoint](Code&#32;Library&#32;Presentation.pptx)
+[Code library powerpoint](https://github.com/Economic/data_bootcamp/blob/master/Code%20Library%20Presentation.pptx)
 
 ## 2022 Data analysis in Stata ([Video](https://www.youtube.com/watch?v=L04fzN2uOVE&list=PLOeWdRZsn2L__Noita2w4bQwd1tMJrfLU&index=5))
 [Data analysis in Stata slides](Data&#32;analysis&#32;in&#32;.pptx)  
