--- a/code/epi_microdata.qmd
+++ b/code/epi_microdata.qmd
@@ -1,10 +1,11 @@
 ---
-title: "Using EPI's CPS Extracts"
+title: "R: Using EPI's CPS Extracts"
 ---
 
 **Note:** Users will need to install epiextractr for this example. Refer to [EPI built libraries](epi-libraries.qmd) for installation instructions
 
 ```{r Load libraries, message=FALSE}
+
 library(tidyverse)
 library(epiextractr)
 library(here)
