--- a/code/bin_wage_deciles.qmd
+++ b/code/bin_wage_deciles.qmd
@@ -1,18 +1,14 @@
 ---
 title: "Wage deciles by state"
-execute:
-  echo: false
+
+eval: false
 ---
 
 ```{r, include=FALSE}
-
-stata_path <- "z:/usr/local/stata14/xstata-se"
-knitr::opts_chunk$set(engine.path = stata_path)
-
+library(Statamarkdown)
 ```
 
-```{stata, evaluate=FALSE, output=FALSE}
-
+```{stata}
 set more off
 clear all
 
